# OpenKav

./: CMakeLists.txt  README.md
.github/: FUNDING.yml
src/: CMakeLists.txt  iso7816apdu.h  main.cpp  ravkavloadmanager.cpp  ravkavloadmanager.h  websdkconnector.cpp  websdkconnector.h
